--- a/Resiliaflix/css/flex.css
+++ b/Resiliaflix/css/flex.css
@@ -1,16 +1,34 @@
-header div{
+#container .topo{
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: flex-start;
 }
-header nav{
+#container nav{
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: flex-start;
+}
+.box-filmes{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 
-footer{
+.rodape-filmes{
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.rodape{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.icones-rodape{
+    display: flex;
+    justify-content: space-between;
+    align-items: center
 }
