--- a/Resiliaflix/css/style.css
+++ b/Resiliaflix/css/style.css
@@ -1,57 +1,107 @@
-/*TOPO*/
 body{
+    background: #000000;
+    font-family: 'Montserrat', sans-serif;
     width: 100%;
 }
-#topo{
-    width: 90%;
+#container{
+    width: 80%;
     margin: 0 auto;
 }
-header{
+/*TOPO*/
+#container .topo{
     width: 100%;
-    background-color: black;
-    padding: 15px;
+    height: 50px;
+    padding: 25px;   
 }
-header nav a img{
-    padding-top: 5px;
-    width: 30px;
+#container .topo nav a{
     margin-left: 15px;
 }
-header nav img{
-    max-width: 100%;
-    max-height: 100%;
-
+#container header a img{
+    width: 35px;
 }
-header a{
-    text-decoration: none;
-    color: #ffb200;
-    border-radius: 5px;
-    padding: 7px 10px ;
-    margin-left: 10px;
-    height: 100%;
-}
-header a:hover  .icone-topo{
-    width: 40px;
-}
-
-/*Conteudo*/
+/*CONTEUDO*/
 main{
-    background: #333333;
-    width: 100%;
+    width: 88%;
+    margin: 0 auto;
+}
+h2{
+    margin: 25px 0;
+    background-color: #ffb200;
+    text-align: center;
+    color: black;
+    font-size: 40px;
+    font-weight: bold;
+    padding: 25px 0;
+    text-transform: uppercase;
+}
+.filmes a{
+    color: #000000;
+    text-decoration: none;
+}
+.filmes{
+    background: #ffffff;
+    width: 30%;
+    height: 400px;
+    text-align: center;
+    padding-bottom: 25px;
+    margin: 15px 15px 0 0;
+}
+.filmes h3{
+    height: 55px;
+    font-size: 25px;
+    padding: 15px;
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    line-height: 30px;
+}
+.caixa img {
+    width: 250px;
+    height: 300px;
+}
+.filmes p{
+    justify-content: center;
+    padding: 8px;
+    color: #000000;
 }
 
-/*Rodapé*/
-footer{
+/*Rodapé filmes*/
+.rodape-filmes{
     width: 100%;
-    color: #ffb200;
-    background: #000;
-    padding: 5px 15px ;
+    background: #ffb200;
+    margin-top: 20px;
+}
+.films-rodape{
+    width: 20%;
+    margin: 5px;
     box-sizing: border-box;
 }
-footer img, footer p{
-    padding-bottom: 10px;
+.rodape-filmes h3{
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
-footer a img{
-    padding-top: 5px;
+.rodape-filmes ul li{
+    padding: 5px;
+    margin-bottom: 5px;
+}
+.rodape-filmes a{
+    color: #000000;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+}
+.rodape-filmes a:hover{
+    text-decoration: underline;
+}
+
+/*Rodapé */
+.rodape{
+    height: 60px;
+    color: #ffb200;
+    font-weight: bold;
+}
+.icones-rodape a img{
     width: 30px;
-    margin-left: 15px;
+    margin: 0px 15px;
 }
