--- a/Resiliaflix/css/style.css
+++ b/Resiliaflix/css/style.css
@@ -1,107 +1,102 @@
-body{
-    background: #000000;
-    font-family: 'Montserrat', sans-serif;
-    width: 100%;
-}
 #container{
-    width: 80%;
-    margin: 0 auto;
+    width: 100%;
+    background-color: black;
+ 
 }
 /*TOPO*/
-#container .topo{
-    width: 100%;
-    height: 50px;
-    padding: 25px;   
-}
-#container .topo nav a{
-    margin-left: 15px;
-}
-#container header a img{
-    width: 35px;
-}
-/*CONTEUDO*/
-main{
-    width: 88%;
-    margin: 0 auto;
-}
-h2{
-    margin: 25px 0;
+header{
     background-color: #ffb200;
-    text-align: center;
-    color: black;
-    font-size: 40px;
-    font-weight: bold;
-    padding: 25px 0;
-    text-transform: uppercase;
-}
-.filmes a{
-    color: #000000;
-    text-decoration: none;
-}
-.filmes{
-    background: #ffffff;
-    width: 30%;
-    height: 400px;
-    text-align: center;
-    padding-bottom: 25px;
-    margin: 15px 15px 0 0;
-}
-.filmes h3{
-    height: 55px;
-    font-size: 25px;
-    padding: 15px;
-    text-transform: uppercase;
-    color: black;
-    font-weight: bold;
-    line-height: 30px;
-}
-.caixa img {
-    width: 250px;
-    height: 300px;
-}
-.filmes p{
-    justify-content: center;
-    padding: 8px;
-    color: #000000;
-}
-
-/*Rodapé filmes*/
-.rodape-filmes{
-    width: 100%;
-    background: #ffb200;
-    margin-top: 20px;
-}
-.films-rodape{
-    width: 20%;
-    margin: 5px;
+    height: 80px;
+    padding: 10px;
     box-sizing: border-box;
+    /*FLEX*/
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.rodape-filmes h3{
-    font-size: 20px;
+header h1{
+    font-size: 30px;
     font-weight: bold;
-    text-transform: uppercase;
 }
-.rodape-filmes ul li{
-    padding: 5px;
-    margin-bottom: 5px;
-}
-.rodape-filmes a{
-    color: #000000;
+header a{
     text-decoration: none;
-    font-size: 12px;
-    font-weight: bold;
+    color: #ffb200;
+    font-size: 20px;
+    margin-left: 10px;
+    border: 1px solid black;
+    background-color: black;
+    padding: 5px;
+    border-radius: 5px;
 }
-.rodape-filmes a:hover{
+header a:hover{
     text-decoration: underline;
 }
 
-/*Rodapé */
-.rodape{
-    height: 60px;
-    color: #ffb200;
-    font-weight: bold;
+/*CONTEUDO*/
+main{
+    background-color: black;
+    width: 80%;
+    margin: 0 auto;
 }
-.icones-rodape a img{
+main  .titulo{
+    width: 100%;
+    height: 60px;
+    background-color: #ffb200;
+    margin: 15px;
+    font-size: 30px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 15px 0;
+    box-sizing: border-box;
+
+}
+.box-filmes{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.filmes{
+    margin: 15px;
+    border: 5px solid #ffb200;
+    width: 300px;
+    text-align: center;
+    color: #ffb200;
+    padding-bottom: 15px;
+}
+.filmes h2{
+    font-size: 25px;
+    height: 60px;
+    width: 300px;
+    margin-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+}
+.fimes img{
+    width: 250px;
+}
+
+/*RODAPÉ*/
+footer{
+    height: 35px;
+    background: #ffb200;
+    padding: 15px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer nav a img{
     width: 30px;
-    margin: 0px 15px;
+    background-color: black;
+    padding: 3px;
+    border-radius: 5px;
+    margin-left: 10px;;
+}
+
+footer h2{
+    font-size: 30px;
+    font-weight: bold;
 }
